--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   firebase_core: ^2.16.0
   firebase_auth: ^4.11.1
   modal_progress_hud_nsn: ^0.4.0
-  cloud_firestore: ^4.10.0
+  #cloud_firestore: ^4.10.0
     
 dev_dependencies:
   flutter_test:
